--- a/0010. Regular Expression Matching.ipynb
+++ b/0010. Regular Expression Matching.ipynb
@@ -19,9 +19,24 @@
    "execution_count": 1,
    "id": "b0750b64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3493445488.py, line 90)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [1]\u001b[0;36m\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "    def isMatch(s: str, p: str) -> bool:\n",
+    "        \n",
+    "        \n",
+    "        '''eliminating part of the patten in not important, \n",
+    "        looks for asteriks, if it finds an asteriks it will determinte which letter goes with it by looking\n",
+    "        at the previous character and updating the position of the i in p List'''\n",
+    "        \n",
     "        new_p = \"\"\n",
     "        leng = len(p)\n",
     "        for i in range(leng):\n",
@@ -35,6 +50,10 @@
     "                new_p += p[i]\n",
     "        print(new_p)\n",
     "\n",
+    "        \n",
+    "        '''Get non repeating elements from new_p. If next character is asteriks or dot, contine, else\n",
+    "        if the character is not in the string set form s return False. '''\n",
+    "        \n",
     "        ss = set(s)\n",
     "        for i in range( len(new_p)):\n",
     "            if i < len(new_p)-1 and new_p[i+1]==\"*\":\n",
@@ -45,14 +64,19 @@
     "                if new_p[i] not in ss:\n",
     "                    print(\"Fast False\")\n",
     "                    return False\n",
+    "                \n",
+    "        '''If there is no dot in the new string pattern, check if all elements from s exisits in new_p and if\n",
+    "        it is not in s, return False'''\n",
+    "        \n",
     "        if \".\" not in new_p:\n",
     "            for i in s:\n",
     "                if i not in new_p:\n",
     "                    return False\n",
-    "\n",
+    "        \n",
+    "        '''Detrmine of your pattern matches to an empty string from s. If the 2nd charcter is an asteriks\n",
+    "        return the following characters, eliminiating forst 2 characters untl empty. Stop condition. '''\n",
     "\n",
     "        def pattern_empty(pattern):\n",
-    "            #print(f\"pattern_empty: {pattern}\")\n",
     "            leng = len(pattern)\n",
     "            if leng==0:\n",
     "                return True\n",
@@ -63,33 +87,43 @@
     "            else:\n",
     "                return False\n",
     "\n",
+    "        '''If string and pattern empty return True. If string is not empty and pattern empty return False.\n",
+    "        If string empty and pattern not empty return False. Stop Conditions.'''    \n",
     "\n",
     "        def mat(st, pa):\n",
-    "            #print(f\"st: {st} | pa: {pa}\")\n",
     "            if st ==\"\" and pattern_empty(pa):\n",
-    "                #print(\"Both Empty\")\n",
     "                return True\n",
     "            elif st != \"\" and pa == \"\":\n",
-    "                #print(f\"PA Empty. S: {st} | P: {pa}\")\n",
     "                return False\n",
     "            elif st == \"\" and not pattern_empty(pa):\n",
-    "                #print(f\"ST Empty. S: {st} | P: {pa}\")\n",
     "                return False\n",
     "\n",
+    "            \n",
     "            string_char = st[0]\n",
     "            pattern_char = pa[0]\n",
-    "\n",
+    "            \n",
+    "            '''Create a flag for asteriks. True or False'''\n",
     "            if len(pa) > 1:\n",
     "                asterisk = pa[1] == \"*\"\n",
     "            else:\n",
     "                asterisk = False\n",
     "\n",
+    "            '''If if first character if pattern is a dot or matching string element'''    \n",
     "            if pattern_char == \".\" or string_char == pattern_char:\n",
+    "                \n",
+    "                '''If it is an asteriks 3 cases: \n",
+    "                1- move 1 char for string 2 characters through the pattern, \n",
+    "                2- move 2 characters through the pattern but none through the string\n",
+    "                3- move 1 character through string but none through pattern'''\n",
     "                if asterisk:\n",
     "                    res = mat(st[1:], pa[2:]) or mat(st, pa[2:]) or mat(st[1:], pa) \n",
+    "                \n",
+    "                '''Otherise Move through the list'''\n",
     "                else:\n",
     "                    res = mat(st[1:], pa[1:])\n",
     "                return res\n",
+    "            \n",
+    "            '''No match, char not a dot or same characters'''\n",
     "            else:\n",
     "                if asterisk:\n",
     "                    return mat(st, pa[2:])\n",
@@ -101,28 +135,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6f26a1b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'aa' \n",
     "p = 'a'\n",
@@ -132,28 +148,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2b52cf29",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a*\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'aa' \n",
     "p = 'a*'\n",
@@ -163,28 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f435fcd0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".*\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s = 'ab'\n",
     "p = '.*'\n",
