--- a/0021. Merge Two Sorted Lists.ipynb
+++ b/0021. Merge Two Sorted Lists.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "21. Merge Two Sorted Lists\n",
     "\n",
-    "You are given the heads of two sorted linked lists list1 and list2. Merge the two lists in a one sorted list. The list should be made by splicing together the nodes of the first two lists. Return the head of the merged linked list.\n",
-    "\n"
+    "You are given the heads of two sorted linked lists list1 and list2. Merge the two lists in a one sorted list. The list should be made by splicing together the nodes of the first two lists. Return the head of the merged linked list."
    ]
   },
   {
@@ -30,6 +29,7 @@
     "\n",
     "        ini = ListNode(val = -150)\n",
     "        current = ini\n",
+    "        \n",
     "        while list1 != None or list2 != None:\n",
     "\n",
     "            elem1 = list1.val if list1!= None else 150\n",
